--- a/Excalidraw/Drawing 2025-02-24 00.23.49.excalidraw.md
+++ b/Excalidraw/Drawing 2025-02-24 00.23.49.excalidraw.md
@@ -7,8 +7,22 @@ tags: [excalidraw]
 ==⚠  Switch to EXCALIDRAW VIEW in the MORE OPTIONS menu of this document. ⚠== You can decompress Drawing data with the command palette: 'Decompress current Excalidraw file'. For more info check in plugin settings under 'Saving'
 
 
+# Excalidraw Data
+
+## Text Elements
+%%
 ## Drawing
 ```compressed-json
-N4IgLgngDgpiBcIYA8DGBDANgSwCYCd0B3EAGhADcZ8BnbAewDsEAmcm+gV31TkQAswYKDXgB6MQHNsYfpwBGAOlT0AtmIBeNCtlQbs6RmPry6uA4wC0KDDgLFLUTJ2lH8MTDHQ0YNMWHRJMRZFAA5FAGYyJE9VGEYwGgQAbQBdcnQoKABlALA+UEl8PGzsDT5GTkxMch0YIgAhdFQAayKuRlwAYXpMenwEEABiADMx8ZAAX0mgA
+N4KAkARALgngDgUwgLgAQQQDwMYEMA2AlgCYBOuA7hADTgQBuCpAzoQPYB2KqATLZMzYBXUtiRoIACyhQ4zZAHoFAc0JRJQgEYA6bGwC2CgF7N6hbEcK4OCtptbErHALRY8RMpWdx8Q1TdIEfARcZgRmBShcZQUebQAObQBmGjoghH0EDihmbgBtcDBQMBKIEm4IIwA5AGkAQQARACV9ABYATQB5AFVu9vx8Ju6ANgBlYfxUkshYRAqgojkkflLM
+
+bmcARlak5IB2AFYVyBh11oBOXe1tg6OIChJ1bnPbyQRCZWluYfjb62Vg7gABluzCgpDYAGsEABhNj4NikCoAYg2CFRqKmpU0uGwEOU4KEHGIsPhiIkYOszDguEC2UxkAAZoQBqNYACJIIPPSIKDwVCAOoPSTcPiFARgyEIVkwdnoTnlW4Ej4ccK5NAbW5sanYNQndWA4FiiD44RwACSxDVqDyAF1bgzyJkLdwOEIBrdCESsBVcIDuQSiSrmFbitN
+
+oPBxLwxQBfEEIBDEbgbYa7QGtYZJeKHI2MFjsLhoHiisO51icKqcMQijY8YYbfa7eI8JIe5gNdJQBPcMFCBC3TTCIkAUWCmWyVtd7qNQjgxFwncT6t2rUBSV2Zy2gJ4gOGtyIHAhLrd+D3bFxXbQDIIYUK0fAdrouDgcFZ88joegr0yFSIHygmIYQgEAoAAhHE8QDYk4QRZEGTg+CAOwERaSgM1O30Vk+RhaCyXQFE0QIxDkKyVD0LA3ETUJKDSQ
+
+qCkOCpGkSKI0gULQjIADFmXwaVZR5OEFUKCAkJYki2IwiUBSFEUViE4jsjEzDJR4yM+K5GThNY9CmmEZVVSTdS5NIjJOm1XUkwNAyRPk9D2M4KB2NwfRmT1VBs1KDTRJsuzRkIIxI23SzNIyAAVLAoDqX8C3QYIGX/QLPIyV9SHCli2AoV5cEXVBJxPQSPOsjIhyJOpUvSkIsogGlwSoeKCv0ErquCiMKkggDmGwcEBgADSec4EhuQT2s6/B2i+f
+
+Zhm0caeDcyAjDYAxuFDSB6AIXsk1vWqjP0bSqKDK0IFamT8RIHy/JFQ1SmO4hWQQOBuBm41SBIABZNhiAQIrcE0YIsqvfAwiOp7qJgtAlogEC4Qq0hlGxAAKHgNl2aheER5GEaR1BAUmgBKbkmgQZQ3RpFqYdweGkmBXgKbR6nMZxiANrywzFKhEyoHzCdjxkh1HIQfGvSejhlEWo0si+n7u1IXtbmwRZJelo0OF5+W+yNYQoH3SMewQRnSjsAAr
+
+BBsByUYlbgV73s+76L1QP6AcEnF2cYYL5smUGjVmFSwmCY3825JDQQMJq5jQHLT3PX7r1VsN8FCcLfed12jwGW9wFjOgmWCEM72jIA==
 ```
 %%
